# rcg

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  todo.txt  tools.py  update.py
.ebextensions/: cron-linux.config
rcg/: __init__.py
rcg/code/: code.py  gender_code.py  helpers.py  track_code.py
rcg/config/: config.py
rcg/dash/: dash_code.py  dash_test.py  dashboard.py
rcg/db/: __init__.py  models.py  routes.py
rcg/static/styles/: stylesheet.css
rcg/templates/: home.html  template.html
rcg/web/: chart_class.py  routes.py
