[tool.poetry]
name = "rcg_app_2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.20.0"
wikipedia = "^1.4.0"
pylast = "^5.0.0"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"
click = "^8.1.3"
python-dotenv = "^0.21.0"
pandas = "^1.5.1"
connexion = "^2.14.1"
regex = "^2022.10.31"
dash = "^2.7.0"
pymysql = "^1.0.2"
flask = "^2.2.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
